fixed sizing of Smoothed? checkbox on mobile

--- a/src/assets/css/views/perlin-noise-zero-control.css
+++ b/src/assets/css/views/perlin-noise-zero-control.css
@@ -20,9 +20,9 @@ input.slider {
         width: 100%;
     }
 
-    .controls input{
+    /*.controls input{
         width: 100%;
-    }
+    }*/
 
     .timelineContainer {
         flex-direction: column;
